# ImageConverter

./: BinaryFuncs.cpp  BinaryFuncs.h  CMakeLists.txt  GeneralImageDecoder.cpp  GeneralImageDecoder.h  HexLib.cpp  HexLib.h  HuffmanTableDecoder.cpp  HuffmanTableDecoder.h  MethodDecoder.cpp  MethodDecoder.h  QuantTableDecoder.cpp  QuantTableDecoder.h  StartOfScanDecoder.cpp  StartOfScanDecoder.h  image_ppm.cpp  image_ppm.h  main.cpp  structs.h
